Add FAD colors pallet

--- a/packages/client3/styles/globals.css
+++ b/packages/client3/styles/globals.css
@@ -17,7 +17,7 @@
     height: 100%;
   }
   body {
-    @apply font-sans font-normal text-sand-700;
+    @apply font-sans font-normal text-theme-primary;
   }
 
   /* gets rid of that highlight when you tap buttons on mobile */
@@ -102,7 +102,7 @@
 
 @layer utilities {
   .focused {
-    @apply ring-2 ring-eggplant-300;
+    @apply ring-2 ring-theme-primary;
   }
   .unfocused {
     @apply ring-0;
@@ -112,12 +112,12 @@
 /* Toastify custom styles */
 :root {
   --toastify-color-progress-light: #000;
-  --toastify-color-success: theme("colors.grass.100");
+  --toastify-color-success: theme("colors.theme.primary");
   --toastify-color-warning: #fbf7d5;
-  --toastify-color-error: theme("colors.clay.100");
-  --toastify-text-color-success: theme("colors.grass.800");
+  --toastify-color-error: theme("colors.theme.primary");
+  --toastify-text-color-success: theme("colors.theme.primary");
   --toastify-text-color-warning: #645c18;
-  --toastify-text-color-error: theme("colors.clay.800");
+  --toastify-text-color-error: theme("colors.theme.primary");
 }
 
 .Toastify__toast-container {
