--- a/packages/client3/styles/globals.css
+++ b/packages/client3/styles/globals.css
@@ -2,22 +2,103 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Kumbh Sans";
+  src: url(./KumbhSans-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Anek Telugu";
+  src: url(./AnekTelugu.ttf) format("truetype");
+}
+
+.light {
+  font-family: "Anek Telugu";
+  @apply text-theme-dark;
+}
+
+.dark {
+  font-family: "Kumbh Sans";
+  @apply text-theme-light;
+}
+
+.display-1 {
+  font-size: 56px;
+  line-height: 72px;
+}
+
+.display-2 {
+  font-size: 32px;
+  line-height: 130%;
+}
+
+.body-text-large {
+  font-size: 20px;
+  line-height: 34px;
+}
+.body-text-medium {
+  font-size: 18px;
+  line-height: 30px;
+}
+.body-text-normal {
+  font-size: 16px;
+  line-height: 24px;
+}
+.body-text-small {
+  font-size: 14px;
+  line-height: 23px;
+}
+
 @layer base {
-  @font-face {
-    font-family: "Newsreader Display";
+  html,
+  body {
     font-style: normal;
-    font-weight: 200 800;
-    font-display: swap;
-    src: url(./NewsreaderDisplay.woff2) format("woff2");
+  }
+  h1 {
+    font-size: 44px;
+    line-height: 57px;
   }
 
+  h2 {
+    font-size: 36px;
+    line-height: 46px;
+  }
+  h3 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  h4 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h5 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  h6 {
+    font-size: 18px;
+    line-height: 130%;
+  }
+  small {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  a {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+/* TODO: remove anything bellow until the end of the project */
+
+@layer base {
   html,
   body,
   #__next {
     height: 100%;
   }
   body {
-    @apply font-sans font-normal text-theme-primary;
+    /* @apply font-sans font-normal text-theme-primary; */
   }
 
   /* gets rid of that highlight when you tap buttons on mobile */
